--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Doctor Website Template | Home :: w3layouts</title>
+		<title>A&M Comics| Home :: w3layouts</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="js/jquery.min.js"></script>
@@ -64,11 +64,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!----start-top-nav---->
 						 <nav class="top-nav">
 							<ul class="top-nav">
-								<li class="active"><a href="#home" class="scroll">Home </a></li>
-								<li><a href="#about" class="scroll">About us</a></li>
-								<li><a href="#services" class="scroll">our services</a></li>
-								<li><a href="#team" class="scroll">our team</a></li>
-								<li><a href="#contact" class="scroll">Contact</a></li>
+								<li class="active"><a href="#home" class="scroll">Inicio </a></li>
+								<li><a href="#about" class="scroll">Categoria</a></li>
+								<li><a href="#services" class="scroll">Comics</a></li>
+								<li><a href="#team" class="scroll">Galeria</a></li>
+								<li><a href="#contact" class="scroll">Contacto</a></li>
 							</ul>
 							<a href="#" id="pull"><img src="images/menu-icon.png" title="menu" /></a>
 						</nav>
@@ -141,8 +141,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div id="about" class="about">
 				<div class="container">
 					<div class="header about-header text-center">
-						<h2>about us</h2>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+						<h2>El maravilloso universo de los comics</h2>
+						<p>Aqui en A&M Comics, encontraras una gran variedad de todos tus comics.</p>
 					</div>
 					<!---- About-grids ---->
 					<div class="about-grids">
@@ -151,8 +151,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<img src="images/img1.jpg" title="name" />
 								<span class="t-icon1"> </span>
 								<div class="about-grid-info text-center">
-									<h3><a href="#">Children's specialist</a></h3>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+									<h3><a href="#">Comics</a></h3>
+									<p>Contamos con una gran varierdad de historietas, de todos los generos para cualquier lector.</p>
 								</div>
 							</div>
 						</div>
@@ -161,8 +161,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<img src="images/img2.jpg" title="name" />
 								<span class="t-icon1"> </span>
 								<div class="about-grid-info text-center">
-									<h3><a href="#">Women's specialist</a></h3>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+									<h3><a href="#">Mangas</a></h3>
+									<p>Tambien contamos con un amplio catalogo de todos tus mangas favoritos.</p>
 								</div>
 							</div>
 						</div>
@@ -171,8 +171,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<img src="images/img3.jpg" title="name" />
 								<span class="t-icon2"> </span>
 								<div class="about-grid-info text-center">
-									<h3><a href="#">men's specialist</a></h3>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+									<h3><a href="#">Otros</a></h3>
+									<p> En A&M Comics tambien contamos con varias figuras coleccionables, funko pop, legos entre otros</p>
 								</div>
 							</div>
 						</div>
