--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          <img src="images/slide1.jpg" alt="">
 			          <div class="caption">
 			          	<div class="slide-text-info">
-			          		<h1>providing</h1>
-			          		<label>highquality service for men & women</label>
-			          		<a class="slide-btn" href="#">learn more</a>
+			          		<h1>A&M Comics</h1>
+			          		<label>Un gran poder conlleva una gran responsabilidad.</label>
+			          		<a class="slide-btn" href="#">Descubre tu superpoder</a>
 			          	</div>
 			          </div>
 			        </li>
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          <img src="images/slide1.jpg" alt="">
 			          <div class="caption">
 			          	<div class="slide-text-info">
-			          		<h1>providing</h1>
+			          		<h1>A&M Comics</h1>
 			          		<label>highquality service for men & women</label>
 			          		<a class="slide-btn" href="#">learn more</a>
 			          	</div>
@@ -142,7 +142,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="container">
 					<div class="header about-header text-center">
 						<h2>El maravilloso universo de los comics</h2>
-						<p>Aqui en A&M Comics, encontraras una gran variedad de todos tus comics.</p>
+						<p>Aqui en A&M Comics, encontraras una gran variedad de todos tus comics, mangas favoritos.</p>
 					</div>
 					<!---- About-grids ---->
 					<div class="about-grids">
@@ -172,7 +172,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<span class="t-icon2"> </span>
 								<div class="about-grid-info text-center">
 									<h3><a href="#">Otros</a></h3>
-									<p> En A&M Comics tambien contamos con varias figuras coleccionables, funko pop, legos entre otros</p>
+									<p> En A&M Comics tambien contamos con varias figuras coleccionables, funko pop, legos entre otros.</p>
 								</div>
 							</div>
 						</div>
@@ -187,33 +187,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div id="services" class="services">
 				<div class="container">
 					<div class="header services-header text-center">
-						<h2>our services</h2>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+						<h2>Comics, Mangas y muchas cosas mas</h2>
+						<p>Los expertos recomiendan los comics y mangas para curar:</p>
 					</div>
 					<!---- service-grids--->
 					<div class="service-grids">
 						<div class="col-md-3">
 							<div class="service-grid text-center">
 								<a href="#"><span class="s1-icon"> </span></a>
-								<h3><a href="#">Heart problem</a></h3>
+								<h3><a href="#">Problemas de corazon roto</a></h3>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="service-grid text-center">
 								<a href="#"><span class="s2-icon"> </span></a>
-								<h3><a href="#">brain problem</a></h3>
+								<h3><a href="#">Para olvidar los problemas</a></h3>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="service-grid text-center">
 								<a href="#"><span class="s3-icon"> </span></a>
-								<h3><a href="#">knee problem</a></h3>
+								<h3><a href="#">Para volverte mas fuerte</a></h3>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="service-grid text-center">
 								<a href="#"><span class="s4-icon"> </span></a>
-								<h3><a href="#">human bones problem</a></h3>
+								<h3><a href="#">Para volverte un super humano</a></h3>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
@@ -227,8 +227,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div id="team" class="team">
 				<div class="container">
 					<div class="header team-head text-center">
-						<h2>our team</h2>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+						<h2>Gran variedad de generos</h2>
+						<p>Contamos con todos tus generos favortos, desde el terror hasta de romance.</p>
 					</div>
 					<!--- teammember-grids ---->
 					<div class="team-member-grids">
@@ -236,15 +236,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/t1.jpg" title="name" />
 							<div class="team-member-info bottom-t-info">
 								<span> </span>
-								<h3><a href="#">Dr. Keith M. Weiner, M.D.</a></h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type Lorem Ipsum is simply dummy text.is simply dummy text..is simply dummy text.</p>
+								<h3><a href="#">Comics de ultratumba .</a></h3>
+								<p> ¿Te gusta el terror?, en A&M Comics tenemos los mejores comic de terror que podras encontrar. Si nos cuentas tu miedo mas profundo, te daremos el 15% de descuento en tu compra.</p>
 							</div>
 						</div>
 						<div class="team-member-grid">
 							<div class="team-member-info bottom-t-info bottom-t-info-b">
 								<span> </span>
-								<h3><a href="#">Dr. Danielle, M.D.</a></h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type Lorem Ipsum is simply dummy text.is simply dummy text..is simply dummy text..is simply dummy text.</p>
+								<h3><a href="#">Mangas.</a></h3>
+								<p> Contamos con un amplio catalogo de mangas, desde los mas tenebrosos hasta los mas romanticos.</p>
 							</div>
 							<img src="images/t2.jpg" title="name" />
 						</div>
@@ -252,15 +252,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/t3.jpg" title="name" />
 							<div class="team-member-info bottom-t-info">
 								<span> </span>
-								<h3><a href="#">Dr. Joseph, M.D.</a></h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type Lorem Ipsum is simply dummy text.is simply dummy text..is simply dummy text.</p>
+								<h3><a href="#">Cómics clasicos.</a></h3>
+								<p>Tenemos los mejores comics de todas la epocas, ven y descubre cual será tu proximo cómic favorito.</p>
 							</div>
 						</div>
 						<div class="team-member-grid">
 							<div class="team-member-info bottom-t-info bottom-t-info-b">
 								<span> </span>
-								<h3><a href="#">Dr. Caitlin, M.D.</a></h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type Lorem Ipsum is simply dummy text.is simply dummy text..is simply dummy text..is simply dummy text.</p>
+								<h3><a href="#">Manga al dia.</a></h3>
+								<p>Vamos al dia con los mangas que buscas, todos tus mangas favoritos aqui los tienes en A&M Comics.</p>
 							</div>
 							<img src="images/t4.jpg" title="name" />
 						</div>
@@ -268,8 +268,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/t5.jpg" title="name" />
 							<div class="team-member-info bottom-t-info">
 								<span> </span>
-								<h3><a href="#">Dr. Michael, M.D.</a></h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type Lorem Ipsum is simply dummy text.is simply dummy text..is simply dummy text.</p>
+								<h3><a href="#">Comics con poderes.</a></h3>
+								<p>Contamos con los comics de todos tus super heroes favortos, no busques mas y ven a nuestro local. Que la fuerza te acompañe.</p>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
@@ -286,25 +286,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="container">
 						<!---- contact-grids ---->
 						<div class="contact-grids">
-							<h3>contact us</h3>
+							<h3>contactanos </h3>
 							<div class="col-md-5 contact-grid-left">
-								<h4>contact information</h4>
+								<h4>Contacto directo</h4>
 								<ul>
-									<li><span class="cal"> </span><label>Monday - Friday :</label><small>9:30 AM to 6:30 PM</small></li>
-									<li><span class="pin"> </span><label>Address :</label><small>123 Some Street , London, UK, CP 123</small></li>
-									<li><span class="phone"> </span><label>Phone :</label><small>(032) 987-1235</small></li>
+									<li><span class="cal"> </span><label>Lunes a Sabado :</label><small>9:30 AM a 7:30 PM</small></li>
+									<li><span class="pin"> </span><label>Direccion :</label><small>Av. del Charro #32584</small></li>
+									<li><span class="phone"> </span><label>Celular :</label><small>+52 6562929875</small></li>
 									<li><span class="fax"> </span><label>Fax :</label><small>(123) 984-1234</small></li>
-									<li><span class="mail"> </span><label>Email :</label><small> info@doctor.com</small></li>
+									<li><span class="mail"> </span><label>Email :</label><small> A&M@Comics.com</small></li>
 								</ul>
 							</div>
 							<div class="col-md-7 contact-grid-right">
-								<h4>leave us a message</h4>
+								<h4>Dejanos un mensaje</h4>
 								<form>
 									<input type="text" value="Name:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name:';}">
 									<input type="text" value="Email:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email:';}">
 									<input type="text" value="Phone No:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone No:';}">
-									<textarea rows="2" cols="70" onfocus="if(this.value == 'Message:') this.value='';" onblur="if(this.value == '') this.value='Message:';">Message:</textarea>
-									<input type="submit" value="SEND MESSAGE" />
+									<textarea rows="2" cols="70" onfocus="if(this.value == 'Message:') this.value='';" onblur="if(this.value == '') this.value='Message:';">Mensaje:</textarea>
+									<input type="submit" value="Enviar Mensaje" />
 								</form>
 							</div>
 							<div class="clearfix"> </div>
