--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>A&M Comics| Home :: w3layouts</title>
+		<title>A&M Comics | Home :: w3layouts</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="js/jquery.min.js"></script>
@@ -118,8 +118,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          <div class="caption">
 			          	<div class="slide-text-info">
 			          		<h1>A&M Comics</h1>
-			          		<label>highquality service for men & women</label>
-			          		<a class="slide-btn" href="#">learn more</a>
+			          		<label>Un gran poder conlleva una gran responsabilidad</label>
+			          		<a class="slide-btn" href="#">Descubre tu superpoder</a>
 			          	</div>
 			          </div>
 			        </li>
@@ -127,9 +127,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          <img src="images/slide1.jpg" alt="">
 			           <div class="caption">
 			           	<div class="slide-text-info">
-			          		<h1>providing</h1>
-			          		<label>highquality service for men & women</label>
-			          		<a class="slide-btn" href="#">learn more</a>
+			          		<h1>A&M Comics</h1>
+			          		<label>Un gran poder conlleva una gran responsabilidad</label>
+			          		<a class="slide-btn" href="#">Descubre tu superpoder</a>
 			          	</div>
 			          </div>
 			        </li>
@@ -236,7 +236,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/t1.jpg" title="name" />
 							<div class="team-member-info bottom-t-info">
 								<span> </span>
-								<h3><a href="#">Comics de ultratumba .</a></h3>
+								<h3><a href="#">Comics de ultratumba.</a></h3>
 								<p> ¿Te gusta el terror?, en A&M Comics tenemos los mejores comic de terror que podras encontrar. Si nos cuentas tu miedo mas profundo, te daremos el 15% de descuento en tu compra.</p>
 							</div>
 						</div>
@@ -252,8 +252,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/t3.jpg" title="name" />
 							<div class="team-member-info bottom-t-info">
 								<span> </span>
-								<h3><a href="#">Cómics clasicos.</a></h3>
-								<p>Tenemos los mejores comics de todas la epocas, ven y descubre cual será tu proximo cómic favorito.</p>
+								<h3><a href="#">Comics clasicos.</a></h3>
+								<p>Tenemos los mejores comics de todas la epocas, ven y descubre cual sera tu proximo comic favorito.</p>
 							</div>
 						</div>
 						<div class="team-member-grid">
